# openrgb-fade

./: .gitignore  Cargo.toml  README.md
src/: config.rs  default_config.jsonc  fade.rs  hid.rs  key_mappings.rs  main.rs
