[package]
name = "openrgb-fade"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-lite = "2.6.1"
hidapi = "2.6.3"
openrgb2 = "0.3.0"
rusb = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_jsonc = "1.0.108"
tokio = { version = "1.48.0", features = ["macros", "time", "rt", "sync"] }
